k8s/apps/logging/elasticsearch/namespace.yaml
---

kind: Namespace
apiVersion: v1
metadata:
  name: logging
  annotations:
    linkerd.io/inject: enabled
