k8s/apps/logging/elasticsearch/ingressroute.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: elasticsearch
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`elastic.k8s.sbbh.cloud`)
      services:
        - name: efk-es-http
          port: 9200

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kibana
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kibana.k8s.sbbh.cloud`)
      services:
        - name: efk-kb-http
          port: 5601
